--- a/env/production.env
+++ b/env/production.env
@@ -37,3 +37,19 @@ CHATBOT_ACCESS_TOKEN=
 # Job assignment overrides
 JOB_ASSIGN_AUTHORIZED_EMAILS=Bloodservices@mail.com
 ADMIN_NOTIFICATIONS_CC=Bloodservices@mail.com
+
+# Global Payments (GpApi)
+GP_APP_ID=
+GP_APP_KEY=
+GP_MERCHANT_ID=
+GP_CHANNEL=CNP
+GP_COUNTRY=GB
+GP_ENVIRONMENT=PRODUCTION
+GP_DEFAULT_CURRENCY=GBP
+GP_TXN_ACCOUNT_NAME=
+GP_TXN_ACCOUNT_ID=
+GP_RISK_ACCOUNT_NAME=
+GP_RISK_ACCOUNT_ID=
+GP_METHOD_NOTIFICATION_URL=
+GP_CHALLENGE_NOTIFICATION_URL=
+GP_MERCHANT_CONTACT_URL=
