--- a/env/test.env
+++ b/env/test.env
@@ -31,3 +31,19 @@ DATABASE=
 
 #STRIPE
 STRIPE_SECRET_KEY=
+
+# Global Payments (GpApi)
+GP_APP_ID=
+GP_APP_KEY=
+GP_MERCHANT_ID=
+GP_CHANNEL=CNP
+GP_COUNTRY=GB
+GP_ENVIRONMENT=TEST
+GP_DEFAULT_CURRENCY=GBP
+GP_TXN_ACCOUNT_NAME=
+GP_TXN_ACCOUNT_ID=
+GP_RISK_ACCOUNT_NAME=
+GP_RISK_ACCOUNT_ID=
+GP_METHOD_NOTIFICATION_URL=
+GP_CHALLENGE_NOTIFICATION_URL=
+GP_MERCHANT_CONTACT_URL=
