--- a/env/development.env
+++ b/env/development.env
@@ -25,9 +25,9 @@ COOKIE_SECRET=w0OegNTmjhq3WBe0RVFm4LuKnlgOxQbM
 COOKIE_EXP=259200000
 
 DB_HOST=127.0.0.1
-DB_USER=practappstaging
-PASSWORD=0FRAV3McemgGjKkMdkDk
-DATABASE=practappstaging
+DB_USER=znHi3Ozs
+PASSWORD=AghhnvPmOfP7aUzT
+DATABASE=practitionermaindb
 
 #STRIPE
 STRIPE_SECRET_KEY=sk_test_51IG3cNJAdLfZdFr6JEamduNF0mCX3TEJLCluriuzCQXOjY2thxyE>
@@ -39,3 +39,18 @@ CHATBOT_ACCESS_TOKEN=IbSFEmXKLjhasw1SKEDCA6VxKHVi8Ba3awAlChIGqJVYGU8q7FmMGugWjqW
 JOB_ASSIGN_AUTHORIZED_EMAILS=Bloodservices@mail.com
 ADMIN_NOTIFICATIONS_CC=Bloodservices@mail.com
 
+# Global Payments (GpApi)
+GP_APP_ID=LXt7zvmgyxzx5rW3xQBv2jV6E7uqGJvm
+GP_APP_KEY=GGV3r9A0cTDTRSjv
+GP_MERCHANT_ID=MER_7e3e2c7df34f42819b3edee31022ee3f
+GP_CHANNEL=CNP
+GP_COUNTRY=GB
+GP_ENVIRONMENT=TEST
+GP_DEFAULT_CURRENCY=GBP
+GP_TXN_ACCOUNT_NAME=
+GP_TXN_ACCOUNT_ID=
+GP_RISK_ACCOUNT_NAME=
+GP_RISK_ACCOUNT_ID=
+GP_METHOD_NOTIFICATION_URL=
+GP_CHALLENGE_NOTIFICATION_URL=
+GP_MERCHANT_CONTACT_URL=
