--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "globalpayments-api": "^3.10.8",
     "helmet": "^7.1.0",
     "inserturlparams": "^1.0.1",
     "jet-logger": "^1.3.1",
