--- a/env/development.env
+++ b/env/development.env
@@ -25,9 +25,9 @@ COOKIE_SECRET=w0OegNTmjhq3WBe0RVFm4LuKnlgOxQbM
 COOKIE_EXP=259200000
 
 DB_HOST=127.0.0.1
-DB_USER=znHi3Ozs
-PASSWORD=AghhnvPmOfP7aUzT
-DATABASE=practitionermaindb
+DB_USER=practappstaging
+PASSWORD=0FRAV3McemgGjKkMdkDk
+DATABASE=practappstaging
 
 #STRIPE
 STRIPE_SECRET_KEY=sk_test_51IG3cNJAdLfZdFr6JEamduNF0mCX3TEJLCluriuzCQXOjY2thxyE>
